--- a/my-app/src/stylesheets/nav.css
+++ b/my-app/src/stylesheets/nav.css
@@ -1,51 +1,59 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  .container {
+.container {
     margin: 1rem;
     text-align: center;
   }
   
   .nav {
-    background-color: #333;
+    background-color: #000000;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
-    padding: 0 1rem;
+    padding: 0;
+    padding-left: 1rem;
   }
   
   .site-title {
     font-size: 2rem;
   }
   
+  .logo{
+    margin-left: 1rem;
+  }
+
   .nav ul {
     padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
-    gap: 1rem;
+    justify-content: center;
   }
   
-  .nav a {
+  .nav li{
+  width: 200px;
+  display: flex;
+  }
+
+  .nav a  {
     color: inherit;
     text-decoration: none;
     height: 100%;
     display: flex;
     align-items: center;
     padding: .25rem;
+    font-size: 1.5rem;
   }
+
+
+
+
   
   .nav li.active {
-    background-color: #555;
+    text-decoration: underline;
   }
   
-  .nav li:hover {
-    background-color: #777;
-  }
+
+
+
+  
