implemented Product Page
Used react-bootstrap for the product cards and grid layout. Problem is, now I can't turn off the bootstrap fonts for the rest of the site. Currently stuck with the odd looking fonts.

--- a/my-app/src/stylesheets/filterbar.css
+++ b/my-app/src/stylesheets/filterbar.css
@@ -1,6 +1,8 @@
 .product-filter{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:nowrap;
+    margin: 1rem;
+    width: 100%;
 }
 
 .product-filter h1{
@@ -10,7 +12,7 @@
 
 .sort{
     display: flex;
-    margin-right: 20px;
+    margin-right: 0;
 }
 
 .collection-sort{
