--- a/my-app/src/stylesheets/filterbar.css
+++ b/my-app/src/stylesheets/filterbar.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+  
+body {
+  margin: 0;
+  background-color: #7f0b0d;
+  font-family: 'Kanit', sans-serif;
+}
+
+
 .product-filter{
     display: flex;
     flex-wrap:nowrap;
